Фикс отправки/отмены заявки на ивент
