# swagger.yaml
@@ -513,7 +513,7 @@ paths:
 
   /event/{id}/request/:
     post:
-      summary: Подать заявку на ивент с id
+      summary: Подать или отменить заявку на ивент с id
       tags:
         - event
       parameters:
@@ -529,35 +529,7 @@ paths:
             type: string
       responses:
         '200':    # status code
-          description: Заявка на ивент подана
-        '400':    # status code
-          description: Произошла ошибка
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-
-    delete:
-      summary: Отозвать заявку на ивент
-      tags:
-        - event
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-        - name: Authorization
-          in: header
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':    # status code
-          description: Заявка отозвана
+          description: Заявка на ивент подана или отменена
         '400':    # status code
           description: Произошла ошибка
           content:
